syntax = "proto3";

option csharp_namespace = "RTSharp.Daemon.Protocols.DataProvider.Settings";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "DataProvider/CommandReply.proto";

service GRPCQBittorrentSettingsService {
    rpc GetDefaultSavePath (google.protobuf.Empty) returns (google.protobuf.StringValue);
}